fixed spacing+sizing

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
     --global-color-alpha: #E8AE23;
     --global-color-alpha-hover: #e6d5ae;
     /* whitespace */
-    --global-font-size: 0.7rem;
+    --global-font-size: 0.4rem;
 
     --global-baseline: 6px;
     --global-whitespace: calc(var(--global-baseline) * 2);
@@ -120,7 +120,7 @@
 @media (min-width: 1025px) and  (max-width: 1280px){
     :root {
         --global-stream-borderWidth: 3px;
-        --global-font-size: 0.9rem;
+        --global-font-size: 0.8rem;
         --button-font-size: calc(var(--global-font-size) * 1.5);
         --global-margin: 230px;
         --global-overlay-width: 1340px;
@@ -144,6 +144,7 @@
 @media (min-width: 768px) and (max-width: 1024px) {
 
     :root {
+        --global-font-size: 0.6rem;
         --global-margin: 80px;
         --global-icon-width: calc(var(--global-baseline) * 4);
         --global-iconfield-width: calc(var(--global-baseline) * 8);
@@ -417,6 +418,7 @@ input:disabled {
     height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 /*
@@ -549,13 +551,16 @@ input:disabled {
 }
 
 .c-stream-container {
-    margin-top: calc(var(--global-margin) / 4);
+    width: 100%;
+    height: 100%;
+    /* margin-top: calc(var(--global-margin) / 4); */
     /* backgr ound-color: var(--global-card-backgroundColor); */
     /* border-radius: var(--global-borderRadius); */
 
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .c-stream__header {
@@ -570,9 +575,9 @@ input:disabled {
 }
 
 .c-stream__content-timer {
-    width: var(--global-stream-width);
-    height: calc(var(--global-stream-width) * 0.57);
-    padding: var(--global-whitespace-xl);
+    /* width: var(--global-stream-width); */
+    /* height: calc(var(--global-stream-width) * 0.57); */
+    padding: calc(var(--global-whitespace-xxl)*2)  var(--global-whitespace-xxl);
     /* background-color: var(--global-background-color); */
     border-radius: var(--global-borderRadius);
     display: flex;
@@ -581,7 +586,21 @@ input:disabled {
     align-items: center;
 }
 
+@media (min-width: 768px) {
+    .c-stream__content-timer {
+        padding: calc(var(--global-whitespace-xxl)*4)  var(--global-whitespace-xxl);
+    }
+
+}
+
 .c-stream-title {
+    text-align: center;
+    font-size: calc(var(--global-font-size) * 4);
+    line-height: calc(var(--global-font-size) * 4.125);;
+    color: #FFF;
+}
+
+.c-stream-header {
     text-align: center;
     font-size: calc(var(--global-font-size) * 3);
     line-height: calc(var(--global-font-size) * 4.125);;
@@ -590,7 +609,7 @@ input:disabled {
 
 .c-stream-timer {
     text-align: center;
-    font-size: calc(var(--global-font-size) * 4);
+    font-size: calc(var(--global-font-size) * 3);
     line-height: calc(var(--global-font-size) * 4.125);;
     color: #FFF;
 }
